--- a/form.yml
+++ b/form.yml
@@ -8,7 +8,7 @@
 # under /etc/ood/config/clusters.d/*.yml
 # @example Use the Owens cluster at Ohio Supercomputer Center
 #     cluster: "owens"
-cluster: ""
+cluster: "hpc"
 
 # Define attribute values that aren't meant to be modified by the user within
 # the Dashboard form
